<resources>
    //INICIAR SESION
    <string name="app_name">Geolam</string>
    <string name="email_usuario">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    //REGISTRO
    <string name="email">email</string>
    <string name="nombre_usuario">Nombre de Usuario</string>
    <string name="apellido_usuario">Apellido de Usuario</string>
    <string name="edad">Edad</string>
    <string name="sexo_usuario">Sexo</string>
    <string name="action_settings">Settings</string>
    <string name="rec_confirme_la_contrasenia">Confirmar contraseña</string>
    <string name="registrate">Regístrate</string>
    <string name="entrar">Entrar</string>
    <string name="email_registro">Email</string>
    <string name="nombre_regsitro">Nombre</string>
    <string name="apellido_registro">Apellido</string>
    <string name="edad_regsitro">Edad</string>
    <string name="ingreso_regsitro">Guardar</string>
    //INFORMACION DEL LUGAR
    <string name="rec_nombre_del_lugar">Nombre del lugar</string>
    <string name="rec_descripcion_lugar">Descripción del lugar</string>
    <string name="rec_direccion_lugar">Dirección del lugar</string>
    <string name="rec_telefono_lugar">Teléfono del lugar (opcional)</string>
    <string name="rec_especialidades_lugar">Especialidades </string>
    <string name="rec_medicos_lugar">Médicos del lugar</string>
    //GESTION DE LUGARES
    <string name="tipologia">Tipología</string>
    <string name="lugares_de_atencion_medica">Lugares de atencion medica</string>
    <string name="especialidades">Especialidades</string>
    <string name="medicos">Medicos</string>
    //INICIO ADMIN
    <string name="gestion_de_lugares">Gestion de lugares</string>
    <string name="gestion_de_usuarios">Gestion de usuarios</string>
    //TIPOLOGIA
    <string name="titulo_tipologia">Tipología del lugar de atención médica</string>
    <string name="ingreso_tipologia">Tipología</string>
    <string name="agregar_tipologia">Agregar</string>
    <string name="tipologia_agregada">tipologías agregadas</string>
    //ESPECIALIDAD
    <string name="especialidad">Especialidad</string>
    <string name="ingrese_especilidad">Especialidad</string>
    <string name="agregar_especialidad">agregar</string>
    <string name="especialidades_agregadas">Especialidades agregadas</string>
    //MAPA
    <string name="ConexionMapa">Conexión Mapa</string>
    //MEDICO
    <string name="medico">Médico</string>
    <string name="nombre_medico">Nombres</string>
    <string name="apellido_medico">Apellidos</string>
    <string name="lugar_de_trabajo">Lugar de trabajo</string>
    <string name="especialidad_medico">Especialidad</string>
    <string name="descripcion_medico">Descripción</string>
    <string name="agregar_medico">Agregar</string>
    <string name="ver_agregados">Ver Agregados</string>
    //LUGARES
    <string name="rec_whatsapp">WhatsApp (opcional)</string>
    <string name="rec_pagina_web">Página Web (opcional)</string>
    <string name="rec_latitud_lugar">Latitud</string>
    <string name="rec_longitud_lugar">Longitud</string>
    <string name="rec_guardar_informacion">Guardar</string>
    <string name="restabecer">Enviar</string>
    <string name="correo_electronico_restablecer">Correo electrónico</string>
    <string name="mensaje_restablecer">Enviaremos una nueva contraseña a tu correo</string>
    <string name="restablecer_contrasenia">Restablece tu contraseña</string>
    <string name="open" />
    <string name="close" />
    <string name="lugares_menu">Lugares de atención médica</string>
    <string name="inicio_menu">Inicio</string>
    <string name="mis_datos_menu">Mis Datos</string>
    <string name="acerca_menu">Acerca de la app</string>
    <string name="cerrar_menu">Cerrar sesión</string>
    <string name="salir_menu">Salir</string>
    <string name="geolam_menu_enc">GEOLAM</string>
    <string name="olvidaste_contr_login">¿Has olvidado la contraseña?</string>
    <string name="entrar_log">Entrar</string>
    <string name="registro_log">¿No tienes una cuenta? Regístrate</string>
    <string name="nombre_lugar_listado">Nombre del lugar</string>
    <string name="direccion_listado">Dirección</string>
    <string name="lugares_cercanos_inicio">Lugares más cercanos</string>
    <string name="especialidades_inicio">Especialidades</string>
    <string name="lugares_medicos_inicio">Lugares médicos</string>
    <string name="Categoria">Categoría</string>
    <string name="title_activity_login_admin">login_admin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="consultar">Consultar</string>
    <string name="mensaje">Se enviará un enlace de recuperación a tu correo</string>
    <string name="tituloReportes">Reportes</string>

    <string name="digitos_aceptados">abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ-_.,#°0123456789</string>
    <string name="cambioContrasenia">Contraseña</string>

    <string name="reglasContrasenia">
        La contraseña debe tener mínimo 10 y máximo 16 caracteres,
        evitar los espacios en blanco e incluir un caracter especial (?=\\S+$*).
    </string>

    <string name="textEliminarCuenta">
        La eliminación de la cuenta es definitiva
        \nSi eliminas tu cuenta de Geolam, no podrás recuperar la información que proporcionaste.
    </string>
    <string name="configuracion_menu">Configuración</string>
    <string name="textTerminosCondiciones">
        Término 1
        \nTérmino2
        \nTérmino3
        \nTérmino4
        \nTérmino5
        \nTérmino6
        \nTérmino7
        \nTérmino8
    </string>
    <string name="telefono">Teléfono</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="item">item</string>
    <string name="lugaratencionmedica">Lugar de atención Médica</string>
    <string name="asiganar_medico_espe">Asignar Médico | Especialidad | Lugar</string>
    <string name="ingresar_datos">Ingresar datos</string>
    <string name="asignar_lugar_especialidad">Asignar Lugar | Especialidad</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="busqueda_rapida">Búsqueda rápida</string>
    <string name="opinion_opcional">Opinión (Opcional)</string>
    <string name="calificacion">Calificación</string>
    <string name="opiniones">Opiniones</string>
    <string name="ver_otros_comentarios">Ver otros comentarios</string>
    <string name="informacion_extra">Información extra</string>
    <string name="pagina_web">Página Web</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="direccion">Dirección</string>
    <string name="cargando">Cargando…</string>
    <string name="buscar">Buscar</string>
    <string name="tipo">Tipo</string>
    <string name="nombre">Nombre</string>
    <string name="id">Id</string>
    <string name="id_">Id:</string>
    <string name="tutorial">Tutorial</string>


</resources>