<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/encabezado"
        android:title="@string/lugares_menu">
        <menu>
            <item
                android:id="@+id/inicio"
                android:title="@string/inicio_menu" />
            <item
                android:id="@+id/misDatos"
                android:title="@string/mis_datos_menu" />
            <item
                android:id="@+id/acercaApp"
                android:title="@string/acerca_menu" />
            <item
                android:id="@+id/cerrarSesion"
                android:title="@string/cerrar_menu" />
            <item
                android:id="@+id/salir"
                android:title="@string/salir_menu" />

        </menu>

    </item>
</menu>