<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    app:cardElevation="4dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/ivImagenMedico"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/logomedico" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/llLugar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvNombreMedicoLista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textIsSelectable="true"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/id_"
                                android:textAllCaps="true"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/tvIdMedicoLista"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/id"
                                android:textColor="@color/black"
                                android:textIsSelectable="true" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tvEspecialidadMedicoLista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/especialidad"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/tvLugarTrabaja"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/lugar_de_trabajo"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textIsSelectable="true" />

                        <TextView
                            android:id="@+id/tvDescripcionMedicoLista"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descripcion_medico"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textIsSelectable="true" />


                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>

