<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperacionContrasenia">
    <include layout="@layout/activity_menu_toolbar" />

    <LinearLayout
        android:layout_below="@+id/iMenuSupe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="30dp"
            app:cardUseCompatPadding="true"
            android:elevation="10dp"
            >

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/txRecuperacion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/restablecer_contrasenia"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="16sp"
                            android:textStyle="bold" />


                    </RelativeLayout>
                    <TextView
                        android:id="@+id/txMensajeRecuperacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/mensaje"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.textfield.TextInputLayout

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                        android:id="@+id/txrecuperar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="10dp"

                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etRecuperacion"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:layout_marginTop="15dp"
                            android:singleLine="true"
                            android:hint="@string/correo_electronico_restablecer"
                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEnviarEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="80dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginRight="80dp"
                        android:text="@string/restabecer"
                        android:textColor="@android:color/white"
                        android:textSize="15sp" />

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>